# prism_prototype

./: .env.dev  .gitattributes  .gitignore  DB_initalise.py  Dockerfile  Dockerfile.keycloak  Dockerfile.web  QUICKSTART.md  README.md  Schema.json  docker-compose.yml  manage.py  pyproject.toml
apps/accounts/: backends.py  context_processors.py  middleware.py  permissions.py  urls.py  views.py
apps/core/: admin.py  middleware.py  models.py  urls.py  views.py
apps/core/migrations/: 0001_initial.py
apps/datasets/: admin.py  api_urls.py  api_views.py  forms.py  models.py  serializers.py  urls.py  views.py
apps/datasets/migrations/: 0001_initial.py
apps/ingestion/: admin.py  models.py  urls.py  views.py
apps/ingestion/migrations/: 0001_initial.py
apps/lineage/: admin.py  models.py  urls.py  views.py
apps/qaqc/: admin.py  models.py  urls.py  views.py
apps/schemas/: admin.py  api_urls.py  api_views.py  forms.py  models.py  serializers.py  urls.py  views.py
keycloak/: prism-realm.json
prism_site/: __init__.py  celery.py  settings.py  urls.py  wsgi.py
scripts/: create-demo-data.py  run-dev.sh  setup.sh  start-web.sh
static/css/: theme-prism-dark.css
templates/: base.html
templates/accounts/: login.html
templates/core/: home.html  settings.html
templates/datasets/: detail.html  form.html  list.html  table_add.html  table_bulk.html  table_edit.html  table_view.html
templates/ingestion/: list.html
templates/lineage/: view.html
templates/qaqc/: dashboard.html
templates/schemas/: detail.html  form.html  list.html  version_form.html
(+6 files in other folders)
